# aigenius-ticketing

./: .gitignore  API_TESTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  sla_config.yaml  vercel.json
api/: index.py
docs/: DATA_MODEL.md  INTERVIEW_PREP.md  MILVUS_IMPORT.md  milvus_import.json  milvus_ui_import.json
docs/images/: README.md
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml.template  service.yaml
scripts/: generate_milvus_import.py  prepare_milvus_import.py
src/: main.py
src/config/: __init__.py
src/core/: __init__.py  exceptions.py
src/infrastructure/database/: __init__.py
src/infrastructure/llm/: __init__.py
src/infrastructure/vectorstore/: __init__.py
src/shared/: __init__.py
src/shared/api/: middleware.py
src/shared/infrastructure/: __init__.py  grafana.py  logging.py
src/sla/: __init__.py  services.py
src/sla/application/: __init__.py  dto.py  services.py
src/sla/domain/: __init__.py  entities.py  value_objects.py
src/sla/infrastructure/: __init__.py  external.py  models.py  repositories.py
src/sla/interfaces/: __init__.py  controllers.py
src/triage/: __init__.py
src/triage/application/: __init__.py  dto.py  services.py
src/triage/domain/: __init__.py  entities.py
src/triage/infrastructure/: __init__.py  external.py  models.py  repositories.py
src/triage/interfaces/: __init__.py  controllers.py
theory/: ANSWERS.md
